--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .Wrapper {
   margin-top: 15rem;
 }
@@ -18,7 +12,7 @@
 .HomePage {
 
   text-align: center;
-  background: linear-gradient(#747ee9, #ffffff);
+  background: linear-gradient(#1b0bc4, #ffffff);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -82,3 +76,57 @@ input[type=number]::-webkit-outer-spin-button {
   transform: translateY(2px); 
   box-shadow: none;
 }
+
+.img {
+  object-fit:contain;
+  max-width: 40%;
+  filter: blur(8px);
+  transition: filter 0.2s;
+}
+
+img:hover {
+  filter: none;
+}
+
+.reloadBtn, .LCBtn {
+  position: fixed;
+  color: #ffffff;
+  font-weight: bold;
+  border: none;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: all 0.15s;
+  padding: 5px 10px;
+  font-size: 20px;
+  top: 5%;
+  transform: translateY(-5%);
+}
+
+.reloadBtn {
+  right: 0;
+  background-color: #bd4242;
+  border-radius: 25px 0px 0px 25px;
+}
+
+.LCBtn {
+  left: 0;
+  background-color: #bcbcbc;
+  border-radius: 0px 25px 25px 0px;
+}
+
+.reloadBtn:hover {
+  background-color: #993333;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+}
+
+.LCBtn:hover {
+  background-color: #6d6d6d;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+}
+
+.reloadBtn:active, .LCBtn:active {
+  box-shadow: none;
+}
+
+
+
