--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .Wrapper {
-  z-index: 10;
+  z-index: 0;
   margin-top: 10%;
   margin-bottom: 15%;
   text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
@@ -51,8 +51,10 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-.h1 {
-  margin-bottom: 25%;
+.titleimg {
+  width: 50%;
+  height: 50%;
+  margin-bottom: 5%;
 }
 
 .go {
@@ -80,45 +82,55 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .img {
-  object-fit: contain;
   filter: blur(6px);
   transition: filter 0.2s;
+}
+
+@media (min-width: 280px) and (max-width: 767px) {
+  img {
+    width: 98vw;
+    height: 98vh;
+  }
+}
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  img {
+    max-width: 98%;
+    max-height: 98%;
+  }
 }
 
 img:hover {
   filter: none;
 }
 
-.reloadBtn,
+.newChapter,
 .LCBtn {
-  position: fixed;
+  z-index: 999;
   color: #ffffff;
   font-weight: bold;
   border: none;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin: 1.5rem 0.35rem 2rem 0.35rem;
   cursor: pointer;
   transition: all 0.15s;
   padding: 0.5rem 1rem;
   font-size: 1rem;
-  top: 5%;
   transform: scale(1);
   border-radius: 3px;
-  zoom: normal;
 }
 
-.reloadBtn {
-  right: 0;
+.newChapter {
   background-color: #bd4242;
   text-shadow: #8a2e2e 2px 2px;
 }
 
 .LCBtn {
-  left: 0;
   background-color: #8f91e7;
   text-shadow: #7374b8 2px 2px;
 }
 
-.reloadBtn:hover {
+.newChapter:hover {
   background-color: #993333;
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
 }
@@ -128,7 +140,7 @@ img:hover {
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
 }
 
-.reloadBtn:active,
+.newChapter:active,
 .LCBtn:active {
   box-shadow: none;
   transform: translateY(1px);
